apps/monitoring/grafana/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana-image-renderer
  labels:
    app: grafana-image-renderer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: grafana-image-renderer
  template:
    metadata:
      labels:
        app: grafana-image-renderer
    spec:
      containers:
        - name: exporter
          image: chalkhwang/grafana-image-renderer:3.9.1
          ports:
            - name: render
              containerPort: 8081
          livenessProbe:
            httpGet:
              port: 8081
              path: /
            initialDelaySeconds: 15
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 8081
              path: /
            initialDelaySeconds: 15
            periodSeconds: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 80m
            limits:
              memory: 512Mi
              cpu: 200m
