apps/monitoring/grafana/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: grafana-image-renderer
  labels:
    name: grafana-image-renderer
spec:
  type: ClusterIP
  selector:
    app: grafana-image-renderer
  ports:
  - name: renderer
    port: 80
    targetPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-internal-vip
  annotations:
    kube-vip.io/vipHost: grafana
  labels:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/name: grafana
spec:
  selector:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/name: grafana
  ports:
  - name: service
    port: 80
    targetPort: 3000
  type: LoadBalancer
  loadBalancerIP: "10.0.7.138"
  loadBalancerClass: kube-vip.io/kube-vip-class
---
apiVersion: v1
kind: Service
metadata:
  name: grafana-internal
  labels:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/name: grafana
  annotations:
    tailscale.com/hostname: "grafana"
spec:
  selector:
    app.kubernetes.io/instance: kube-prometheus
    app.kubernetes.io/name: grafana
  ports:
  - name: service
    port: 80
    targetPort: 3000
  loadBalancerClass: tailscale
  type: LoadBalancer
