apps/monitoring/grafana/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress-internal
spec:
  ingressClassName: internal
  rules:
  - host: grafana.chalk-ho.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-internal
            port:
              name: service
